--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "currency.js": "^2.0.4",
     "express": "^4.18.2",
     "typeorm": "^0.3.10"
   },
