--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "currency.js": "^2.0.4",
     "express": "^4.18.2",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
