--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,14 @@
     "bcrypt": "^5.1.0",
     "currency.js": "^2.0.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
