--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,9 @@
   "name": "backend_ngcash",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "start": "tsc --project tsconfig.json",
     "dev": "nodemon --exec ts-node ./src/index.ts --ignore-watch node_modules"
   },
   "keywords": [],
