--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "tsc --project tsconfig.json",
-    "dev": "nodemon --exec ts-node ./src/index.ts --ignore-watch node_modules"
+    "dev": "nodemon --exec ts-node --files ./src/index.ts --ignore-watch node_modules"
   },
   "keywords": [],
   "author": "",
