--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -15,9 +15,10 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": ".",
-    "paths": {
-      "*": ["node_modules/*", "src/types/*"]
-    }
+    "typeRoots": [
+      "./node_module/@types",
+      "./src/@types"
+    ],
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
