--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc --project tsconfig.json",
+    "start": "node dist/index.js",
+    "build": "tsc --project tsconfig.json",
     "dev": "nodemon --exec ts-node --files ./src/index.ts --ignore-watch node_modules"
   },
   "keywords": [],
